testsuite/tests/typecheck/should_fail/tcfail110.stderr

tcfail110.hs:8:30: error: [GHC-83865]
    • Expecting one more argument to ‘Foo a’
      Expected a type, but ‘Foo a’ has kind ‘* -> *’
    • In the type signature:
        bar :: String -> (forall a. Foo a) -> IO ()
